--- a/app/views/events/edit.erb
+++ b/app/views/events/edit.erb
@@ -4,7 +4,7 @@
       <li>Description: <%= @event.description %></li>
       <li>Location: <%= @event.location_id %></li>
       <li>Host: <%= @event.host_id %></li>
-      <li>Guests: <%= @event.guests.pluck(:username).to_sentence %>
+      <li>Guests: <%= @event.guests.pluck(:full_name).to_sentence %>
       </li>
     </ul>
   </li
