--- a/app/views/events/new.erb
+++ b/app/views/events/new.erb
@@ -1,11 +1,76 @@
-<%= form_for @event do |f| %>
-<%= f.label :name %><br>
-<%= f.text_field :name %><br><br>
-<%= f.label :description %><br>
-<%= f.text_area :description %><br><br>
-<%= f.collection_check_boxes :guest_ids, User.all, :id, :username %>
-<%= f.label :host_id %><br>
-<%= f.number_field :host_id %><br><br>
+<h1>Add an Event</h1>
+<%= form_for Event.new do |f| %>
+<%= f.label :name, "Event Name:" %>
+<%= f.text_field :name, {size:"48"} %><br><br>
+<%= f.label :date, "Event Date:" %>
+<%= radio_button_tag :date, :date%> April 16, 2018<br><br>
+<%= f.label :description, "Event Description:" %><br>
+<%= f.text_area :description,{rows: "9",cols: "60"} %><br><br>
+<%= f.label :location_id, "Location:" %><br>
+
+
+<label>Event Guests:</label>
+<%#= f.text_field :guest_ids, list: "guest_autocomplete" %>
+<%#= text_field_tag 'guest_autocomplete', nil,{list: "guest_autocomplete"} %>
+<input list="guest_autocomplete" size="30">
+  <datalist id="guest_autocomplete">
+    <% if @users  %>
+    <% User.where.not(id:@users.pluck(:id)).each do |guest| %>
+      <option value="<%= guest.full_name %>">
+    <% end %>
+    <% else %>
+    <% User.all.each do |guesst| %>
+      <option value="<%= guest.full_name %>">
+    <% end %>
+    <% end %>
+
+  </datalist>
+  <button type="button">Add Guest to Guest List</button><%= @users.count %>
+  <br>
+
+  <div id="ids">
+
+  </div>
+
+  <div id="checked">
+
+  </div>
+
+
+<%= f.hidden_field :host_id, value: 1 %><br><br>
 
 <%= f.submit %>
+
+
+<%= javascript_tag do %>
+$(document).ready(function() {
+  $("body").css("background","linear-gradient(to bottom, #fff 0%,  #fff 50%, #aaa 100%)");
+});
+
+$("button").click(function(event){
+  event.preventDefault();
+  var dict = {};
+  var guest = dict.guest=$("input[list='guest_autocomplete']").val();
+  console.log(guest)
+
+   $.ajax({
+     url: "/add-guest",
+     type: "post",
+     data: dict,
+  //   success: function(){
+  //     alert('Saved Successfully');
+  //   },
+  //   error:function(){
+  //  alert('Error');
+  //   }
+   });
+$("input[list='guest_autocomplete']").val("");
+$("#ids").html('<input type=\"hidden\" name=\"event[guest_ids][]\" value=\"' + <%=@users.pluck(:id)%> + '\">');
+$("#checked").html('<%= f.collection_check_boxes :guest_ids, @users, :id, :full_name, {} do |b|
+  b.label(style: "margin-right:50px;white-space:nowrap; display:inline-block;") { b.label + ": "+ b.check_box(checked:"checked")}
+end  %>');
+});
+<%end  %>
+
+
 <% end %>
