--- a/app/views/events/show.erb
+++ b/app/views/events/show.erb
@@ -3,8 +3,9 @@
     <ul><h2><%= @event.name %></h2>
       <li>Description: <%= @event.description %></li>
       <li>Location: <%= @event.location_id %></li>
-      <li>Host: <%= @event.host_id %></li>
-      <li>Guests: <%= @event.guests.pluck(:username).to_sentence %>
-      </li>
+      <li>Host: <%= @event.host.full_name %></li>
+      <li><%= pluralize(@event.guests.count, 'Guest')%>: <%= @event.guests.pluck(:full_name).to_sentence %></li>
+
+      <%= button_to 'Edit', edit_event_path(@event) %><%= button_to 'Delete', @event, method: :delete,data: {confirm: "Are you sure?"} %>
     </ul>
   </li
