--- a/app/views/events/new.erb
+++ b/app/views/events/new.erb
@@ -1,11 +1,15 @@
-<%= form_for @event do |f| %>
-<%= f.label :name %><br>
-<%= f.text_field :name %><br><br>
-<%= f.label :description %><br>
-<%= f.text_area :description %><br><br>
-<%= f.collection_check_boxes :guest_ids, User.all, :id, :username %>
-<%= f.label :host_id %><br>
-<%= f.number_field :host_id %><br><br>
+<h1>New Event</h1>
 
-<%= f.submit %>
+<%= form_for @event do |f| %>
+  <%= f.label :name %><br>
+  <%= f.text_field :name %><br><br>
+  <%= f.label :description %><br>
+  <%= f.text_area :description %><br><br>
+  <%= f.label :location %><br>
+  <%= f.collection_select :location_id, Location.all, :name, :name %><br><br>
+  <%= f.label :invite_guests %><br>
+  <%= f.collection_check_boxes :guest_ids, User.all, :id, :username %>
+  <%= f.label :host_id %><br>
+  <%= f.number_field :host_id %><br><br>
+  <%= f.submit %>
 <% end %>
