--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
     <ul class="admin_menu">
       <li><%= link_to 'Events', events_path %></li>
-      <li><%= link_to 'Locations' %></li>
+      <li><%= link_to 'Locations', locations_path %></li>
       <li><%= link_to 'Amenities'  %></li>
       <li><%= link_to 'Manage Users' %></li>
       <li><%= link_to 'Sales Report' %></li>
