--- a/app/views/events/show.erb
+++ b/app/views/events/show.erb
@@ -1,11 +1,8 @@
-
-
-    <ul><h2><%= @event.name %></h2>
-        <li>Description: <%= @event.description %></li>
+<ul><h2><%= @event.name %></h2>
+  <li>Description: <%= @event.description %></li>
   <li>Location: <%= @event.location.name %></li>
   <li>Host: <%= @event.host.fullname %></li>
-      <li><%= pluralize(@event.guests.count, 'Guest')%>: <%= @event.guests.pluck(:full_name).to_sentence %></li>
+  <li><%= pluralize(@event.guests.count, 'Guest')%>: <%= @event.guests.map {|guest| guest.fullname}.to_sentence %></li>
 
-      <%= button_to 'Edit', edit_event_path(@event) %><%= button_to 'Delete', @event, method: :delete,data: {confirm: "Are you sure?"} %>
-    </ul>
-  
+  <%= button_to 'Edit', edit_event_path(@event) %><%= button_to 'Delete', @event, method: :delete, data: {confirm: "Are you sure?"} %>
+</ul>
