--- a/app/views/events/show.erb
+++ b/app/views/events/show.erb
@@ -4,5 +4,6 @@
   <li>Host: <%= @event.host.fullname %></li>
   <li><%= pluralize(@event.guests.count, 'Guest')%>: <%= @event.guests.map {|guest| guest.fullname}.to_sentence %></li>
 
-  <button><%= link_to 'Edit', edit_event_path(@event) %></button><%= button_to 'Delete', @event, method: :delete, data: {confirm: "Are you sure?"} %>
+  <button><%= link_to 'Edit', edit_event_path(@event) %></button>
+  <button><%= link_to 'Delete', @event, method: :delete, data: {confirm: "Are you sure?"} %></button>
 </ul>
