--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
     <ul>
       <li><%= link_to 'Manage Events', events_path %></li>
       <li><%= link_to 'Manage Locations', locations_path %></li>
-      <li><%= link_to 'Manage Amenities'  %></li>
+      <li><%= link_to 'Manage Amenities', amenities_path %></li>
 
       <li><%= link_to 'Manage Users' %></li>
       <li><%= link_to 'Sales Report' %></li>
