--- a/app/views/events/edit.erb
+++ b/app/views/events/edit.erb
@@ -8,26 +8,27 @@
   <%= f.text_area :description,{rows: "9",cols: "60"} %><br><br>
   <%= f.label :location_id, "Location:" %><br>
   <%= f.collection_select :location_id, Location.all, :id, :name %><br><br>
+  <%= f.label :amenities, "Choose Amenities:" %><br>
+  <%= f.collection_check_boxes :amenity_ids, Amenity.all, :id, :name %><br><br>
 
 
 <label>Event Guests:</label>
-<%#= f.text_field :guest_ids, list: "guest_autocomplete" %>
-<%#= text_field_tag 'guest_autocomplete', nil,{list: "guest_autocomplete"} %>
+
 <input list="guest_autocomplete" size="30">
-  <datalist id="guest_autocomplete">
+<datalist id="guest_autocomplete">
 
-    <% User.all.each do |guest| %>
-      <option value="<%= guest.fullname %>">
-    <% end %>
+  <% User.all.each do |guest| %>
+    <option value="<%= guest.fullname %>">
+  <% end %>
 
 
-  </datalist>
-  <button type="button">Add Guest to Guest List</button><%= @users.count %>
-  <br>
+</datalist>
+<button type="button">Add Guest to Guest List</button>
+<br>
 
-  <div id="checked">
+<div id="checked">
 
-  </div>
+</div>
 
 
 <%= f.hidden_field :host_id, value: 1 %><br><br>
@@ -37,7 +38,7 @@
 
 <%= javascript_tag do %>
 $(document).ready(function() {
-  $("body").css("background","linear-gradient(to bottom, #fff 0%,  #fff 50%, #aaa 100%)");
+$("body").css("background","linear-gradient(to bottom, #fff 0%,  #fff 50%, #aaa 100%)");
 });
 
 $("button").click(function(event){
