--- a/app/views/events/new.erb
+++ b/app/views/events/new.erb
@@ -8,11 +8,12 @@
   <%= f.text_area :description,{rows: "9",cols: "60"} %><br><br>
   <%= f.label :location_id, "Location:" %><br>
   <%= f.collection_select :location_id, Location.all, :id, :name %><br><br>
+  <%= f.label :amenities, "Choose Amenities:" %><br>
+  <%= f.collection_check_boxes :amenity_ids, Amenity.all, :id, :name %><br><br>
 
 
 <label>Event Guests:</label>
-<%#= f.text_field :guest_ids, list: "guest_autocomplete" %>
-<%#= text_field_tag 'guest_autocomplete', nil,{list: "guest_autocomplete"} %>
+
 <input list="guest_autocomplete" size="30">
   <datalist id="guest_autocomplete">
 
