--- a/app/views/amenities/new.erb
+++ b/app/views/amenities/new.erb
@@ -1,5 +1,13 @@
 <h1>New Amenity</h1>
-
+<% if @user.errors.any? %>
+<ul class="errors">
+  <% @user.errors.full_messages.each do |msg|  %>
+  <li>
+    <%= msg %>
+  </li>
+  <% end  %>
+</ul>
+<% end  %>
 <%= form_for @amenity do |f| %>
   <%= f.label :name %><br>
   <%= f.text_field :name %><br><br>
