--- a/app/views/events/edit.erb
+++ b/app/views/events/edit.erb
@@ -1,59 +1,58 @@
 <h1>Edit Event</h1>
 <%= form_for @event do |f| %>
+
   <%= f.label :name, "Event Name:" %>
   <%= f.text_field :name, {size:"48"} %><br><br>
   <%= f.label :date, "Event Date:" %>
   <%= radio_button_tag :date, :date%> April 16, 2018<br><br>
   <%= f.label :description, "Event Description:" %><br>
   <%= f.text_area :description,{rows: "9",cols: "60"} %><br><br>
+
+  <label>Event Guests:</label>
+
+  <input list="guest_autocomplete" size="30">
+    <datalist id="guest_autocomplete">
+
+      <% User.all.each do |guest| %>
+        <option value="<%= guest.fullname %>">
+      <% end %>
+    </datalist>
+    <button type="button">Add Guest to Guest List</button>
+    <br>
+    <div id="checked">
+      <%= f.collection_check_boxes :guest_ids, @event.guests, :id, :fullname, {} do |b|
+        b.label(style: "margin-right:50px;white-space:nowrap; display:inline-block;") { b.label + ": "+ b.check_box(checked:"checked")}
+      end %>
+    </div>
+    <br><br>
   <%= f.label :location_id, "Location:" %><br>
   <%= f.collection_select :location_id, Location.all, :id, :name %><br><br>
   <%= f.label :amenities, "Choose Amenities:" %><br>
-  <%= f.collection_check_boxes :amenity_ids, Amenity.all, :id, :name %><br><br>
+
+  <%= f.collection_check_boxes :amenity_ids, Amenity.all, :id, :name, {} do |b|
+    b.label(style: "margin-right:50px;white-space:nowrap; display:inline-block;") { b.label + ": "+ b.check_box}
+  end  %>
+
+  <%= f.hidden_field :host_id, value: current_user.id %><br><br>
+
+  <%= f.submit %>
 
 
-<label>Event Guests:</label>
+  <%= javascript_tag do %>
+  $(document).ready(function() {
+    $("body").css("background","linear-gradient(to bottom, #fff 0%,  #fff 50%, #aaa 100%)");
+  });
 
-<input list="guest_autocomplete" size="30">
-<datalist id="guest_autocomplete">
+  $("button").click(function(event){
+  event.preventDefault();
 
-  <% User.all.each do |guest| %>
-    <option value="<%= guest.fullname %>">
-  <% end %>
+  var name = $("input[list='guest_autocomplete']").val();
 
+  var id = $("datalist option[value='" + name + "']:first").index() +1;
 
-</datalist>
-<button type="button">Add Guest to Guest List</button>
-<br>
+  $("input[list='guest_autocomplete']").val("");
 
-<div id="checked">
-
-</div>
-
-
-<%= f.hidden_field :host_id, value: 1 %><br><br>
-
-<%= f.submit %>
-
-
-<%= javascript_tag do %>
-$(document).ready(function() {
-$("body").css("background","linear-gradient(to bottom, #fff 0%,  #fff 50%, #aaa 100%)");
-});
-
-$("button").click(function(event){
-event.preventDefault();
-
-var name = $("input[list='guest_autocomplete']").val();
-
-var id = $("datalist option[value='" + name + "']:first").index() +1;
-
-$("input[list='guest_autocomplete']").val("");
-
-$("#checked").append('<label for=\"event_guest_ids_' + id + '\">' + name + '</label>: <input type=\"checkbox\" value=\"' + id + '\" checked=\"checked\" name=\"event[guest_ids][]\" id=\"event_guest_ids_' + id + '\">');
-});
-<%end  %>
-
-
-
+  $("#checked").append('<label for=\"event_guest_ids_' + id + '\">' + name + '</label>: <input type=\"checkbox\" value=\"' + id + '\" checked=\"checked\" name=\"event[guest_ids][]\" id=\"event_guest_ids_' + id + '\">');
+  });
+  <%end  %>
 <% end %>
