--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,26 +6,16 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%#= javascript_include_tag 'jquery','jquery_ujs' %>
-    <style>
-    .admin_menu li{display:inline-block;width:18%}
-    .user_menu li{display:inline-block;width:20%}
-    body,html{width:100%;height:100%;margin:0}
-    main{width: 50%;margin: 0 auto;padding:150px 25px 25px; background-color:white;}
-    header{position:fixed;width:100%;margin:0}
-    nav:first-of-type{line-height:0;padding:1px 0;background-color:#777}
-    nav:last-of-type{padding:6px 0;background-color:#444;font-size:18px}
-    nav{margin:0;text-align: center;}
-    nav a{color:white}
-    input,textarea{font-size:18px}
-    button,form.button_to{font-size:13px;display:inline-block}
-    input[type='submit']{cursor:pointer}
-    </style>
+
   </head>
 
   <body>
     <header>
-
+      <div class="banner">
+        <a href="/">Saturdaze</a>
+      <div>
+      <% if current_user %>
+      <% if current_user.email == "admin@gmail.com"  %>
       <nav class="admin_menu">
       <ul>
         <li><%= link_to 'Manage Events', events_path %></li>
@@ -36,6 +26,7 @@
         <li><%= link_to 'Sales Report' %></li>
       </ul>
       </nav>
+      <% end %>
 
       <nav class="user_menu">
       <ul>
@@ -43,9 +34,13 @@
         <li><%= link_to 'Browse Locations', locations_path %></li>
         <li><%= link_to 'Browse Amenities', amenities_path %></li>
         <li><%= link_to 'My Events', events_path %></li>
+        <li>
+        <button><a href="/logout"> Logout</a></button></li>
       </ul>
 
   </nav>
+  <% end %>
+
 </header>
 <section>
 
