--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,6 @@
 
   <body>
     <header>
-
       <nav class="admin_menu">
       <ul>
         <li><%= link_to 'Manage Events', events_path %></li>
@@ -33,7 +32,7 @@
         <li><%= link_to 'Manage Amenities', amenities_path %></li>
 
         <li><%= link_to 'Manage Users' %></li>
-        <li><%= link_to 'Sales Report' %></li>
+        <li><%= link_to 'Sales Report', sales_path %></li>
       </ul>
       </nav>
 
