--- a/app/views/amenities/edit.erb
+++ b/app/views/amenities/edit.erb
@@ -1,7 +1,7 @@
 <h1>New Amenity</h1>
-<% if @user.errors.any? %>
+<% if @amenity.errors.any? %>
 <ul class="errors">
-  <% @user.errors.full_messages.each do |msg|  %>
+  <% @amenity.errors.full_messages.each do |msg|  %>
   <li>
     <%= msg %>
   </li>
