--- a/app/views/events/edit.erb
+++ b/app/views/events/edit.erb
@@ -1,4 +1,13 @@
 <h1>Edit Event</h1>
+<% if @event.errors.any? %>
+<ul class="errors">
+  <% @event.errors.full_messages.each do |msg|  %>
+  <li>
+    <%= msg %>
+  </li>
+  <% end  %>
+</ul>
+<% end  %>
 <%= form_for @event do |f| %>
 
   <%= f.label :name, "Event Name:" %>
