--- a/app/views/events/new.erb
+++ b/app/views/events/new.erb
@@ -1,14 +1,14 @@
 <h1>Add an Event</h1>
-<% if @user.errors.any? %>
+<% if @event.errors.any? %>
 <ul class="errors">
-  <% @user.errors.full_messages.each do |msg|  %>
+  <% @event.errors.full_messages.each do |msg|  %>
   <li>
     <%= msg %>
   </li>
   <% end  %>
 </ul>
 <% end  %>
-<%= form_for Event.new do |f| %>
+<%= form_for @event do |f| %>
   <%= f.label :name, "Event Name:" %>
   <%= f.text_field :name, {size:"48"} %><br><br>
   <%= f.label :date, "Event Date:" %>
