--- a/app/views/locations/new.erb
+++ b/app/views/locations/new.erb
@@ -1,7 +1,7 @@
 <h1>New Location</h1>
-<% if @user.errors.any? %>
+<% if @location.errors.any? %>
 <ul class="errors">
-  <% @user.errors.full_messages.each do |msg|  %>
+  <% @location.errors.full_messages.each do |msg|  %>
   <li>
     <%= msg %>
   </li>
