--- a/app/views/locations/index.erb
+++ b/app/views/locations/index.erb
@@ -1,5 +1,8 @@
 <h1>Locations</h1>
-<button><%= link_to "New Location", new_location_path %></button>
+<% if current_user.email == "admin@gmail.com"  %>
+  <button><%= link_to "New Location", new_location_path %></button>
+<% end %>
+
 <ul>
   <% @locations.each do |location| %>
   <li>
