--- a/app/views/amenities/all.erb
+++ b/app/views/amenities/all.erb
@@ -1,12 +1,12 @@
 
 
 <table>
-  <th>
-    <td>name</td>
-    <td>description</td>
-    <td>price</td>
-    <td colspan="2"></td>
-  </th>
+  <tr>
+    <th>name</th>
+    <th>hescription</th>
+    <th>price</th>
+    <th colspan="2"></th>
+  </tr>
   <% Amenity.all.each do |amenity|  %>
 
   <tr>
