--- a/app/views/events/all.erb
+++ b/app/views/events/all.erb
@@ -1,14 +1,14 @@
 
 
 <table>
-  <th>
-    <td>name</td>
-    <td>location</td>
-    <td>host</td>
-    <td>guest count</td>
-    <td>amenity count</td>
-    <td colspan="2"></td>
-  </th>
+  <tr>
+    <th>name</th>
+    <th>location</th>
+    <th>host</th>
+    <th>guest count</th>
+    <th>amenity count</th>
+    <th colspan="2"></th>
+  </tr>
   <% Event.all.each do |event|  %>
 
   <tr>
