--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,11 +1,11 @@
 
 
 <table>
-  <th>
-    <td>name</td>
-    <td>email</td>
-    <td colspan="2"></td>
-  </th>
+  <tr>
+    <th>name</th>
+    <th>email</th>
+    <th colspan="2"></th>
+  </tr>
   <% User.all.each do |user|  %>
 
   <tr>
