--- a/app/views/locations/all.erb
+++ b/app/views/locations/all.erb
@@ -1,12 +1,12 @@
 
 
 <table>
-  <th>
-    <td>name</td>
-    <td>description</td>
-    <td>address</td>
-    <td colspan="2"></td>
-  </th>
+  <tr>
+    <th>name</th>
+    <th>description</th>
+    <th>address</th>
+    <th colspan="2"></th>
+  </tr>
   <% Location.all.each do |location|  %>
 
   <tr>
