--- a/app/views/events/index.erb
+++ b/app/views/events/index.erb
@@ -2,7 +2,12 @@
 <button><%= link_to "New Event", new_event_path %></button>
 <div>
 <ul class="hosted"><h2>Your Events</h2>
-  <% current_user.events.where(host_id: current_user.id).each do |event| %>
+  <% hosted_events = current_user.events.where(host_id: current_user.id)  %>
+  <% if hosted_events.none? %>
+  <p><em>You haven't planned any events.<em></p>
+
+  <% else %>
+  <% hosted_events.each do |event| %>
   <li>
 
     <ul><h2><%= link_to event.name, event_path(event) %></h2>
@@ -12,10 +17,16 @@
     </ul>
   </li>
   <% end  %>
+  <% end %>
 
 </ul>
 <ul class="invited"><h2>You're Invited!</h2>
-  <% Event.all.select{|x| x.guest_ids.include?(current_user.id) }.each do |event| %>
+  <% invited_events = Event.all.select{|x| x.guest_ids.include?(current_user.id) }  %>
+  <% if invited_events.none? %>
+  <p><em>You haven't been invited to any events.<em></p>
+
+  <% else  %>
+  <% invited_events.select{|x| x.guest_ids.include?(current_user.id) }.each do |event| %>
   <li>
     <ul>
       <h2><%= link_to event.name, event_path(event) %></h2>
@@ -24,6 +35,7 @@
       <li>Host: <%= event.host.fullname %></li>
     </ul>
   </li>
+  <% end  %>
   <% end  %>
 
 </ul>
