--- a/app/views/locations/all.erb
+++ b/app/views/locations/all.erb
@@ -1,5 +1,5 @@
-
-
+<h1>Manage Locations</h1>
+<button><%= link_to "New Location", new_location_path %></button>
 <table>
   <tr>
     <th>name</th>
