--- a/app/views/amenities/all.erb
+++ b/app/views/amenities/all.erb
@@ -1,9 +1,10 @@
-
+<h1>Manage Amenities</h1>
+<button><%= link_to "New Location", new_location_path %></button>
 
 <table>
   <tr>
     <th>name</th>
-    <th>hescription</th>
+    <th>description</th>
     <th>price</th>
     <th colspan="2"></th>
   </tr>
