--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@ header{
   width:100%;
   margin:0;
   box-shadow: 0px 0px 24px 3px #000000;
+  background-color:#000
 }
 nav:first-of-type{
   padding:1px 0;
@@ -23,25 +24,27 @@ nav:last-of-type li{
   background: linear-gradient(to bottom right, red, yellow);
   display: table-cell;
   height: 100%;
-  width: 25%;
-  padding: 12px;
 }
-nav ul a {
-    font-size: 1em;
-  }
+nav:last-of-type ul a {
+    font-size: 18px;
+}
 nav:last-of-type li:nth-child(-n+4){
 width: 22%;
+padding: 12px;
 }
 nav:last-of-type li:nth-child(5){
-  width:12%
+  width:12%;
+  padding: 11px;
+
 }
-
 nav:last-of-type li:nth-child(-n+4){
-
   border-right:1px solid #000;
 }
 nav{margin:0;text-align: center;}
 nav a{color:white}
+td, th {
+    padding:0
+  }
 input,textarea{font-size:18px}
 button,form.button_to{font-size:13px;display:inline-block}
 input[type='submit']{cursor:pointer}
@@ -114,7 +117,7 @@ nav ul a:hover {
     background-color: transparent
 }
 nav:last-of-type li:hover{
-    height: 80px;
+    height: 81px;
     margin-top: -9px;
 }
 
