--- a/app/views/amenities/all.erb
+++ b/app/views/amenities/all.erb
@@ -1,4 +1,4 @@
-<h1>Manage Amenities</h1>
+<h2>Manage Amenities</h2>
 <button><%= link_to "New Location", new_location_path %></button>
 
 <table>
@@ -13,7 +13,7 @@
   <tr>
     <td><%= link_to amenity.name, amenity_path(amenity) %></td>
     <td><%= amenity.description %></td>
-    <td><%= amenity.price_change %></td>
+    <td>$<%= amenity.price_change %></td>
     <td><button><%= link_to 'Edit', edit_amenity_path(amenity) %></button></td>
     <td><button><%= link_to 'Delete', amenity, method: :delete, data: {confirm: "Are you sure?"} %></button></td>
   </tr>
