--- a/app/views/users/all.erb
+++ b/app/views/users/all.erb
@@ -1,3 +1,4 @@
+<h2>Users</h2>
 
 
 <table>
@@ -10,7 +11,7 @@
   <tr>
     <td><%= link_to user.first_name + " " + user.last_name, user_path(user) %></td>
     <td><%= user.email %></td>
-    
+
   </tr>
   <% end %>
 
