--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
-<%= form_for @user do |f| %>
-<h1>Sign In</h1>
+<%= form_for @user, html: {style: "margin-top:-150px"}  do |f| %>
+<h2>Sign In</h2>
   Email: <%= f.text_field :email %><br>
   Password: <%= f.password_field :password %><br>
   <%= f.submit "Sign In" %>
