flashes and public-activity

--- a/app/views/events/index.erb
+++ b/app/views/events/index.erb
@@ -1,4 +1,7 @@
 <h2>Events</h2>
+<%= render_activities(@activities) %>
+
+
 <button><%= link_to "New Event", new_event_path %></button>
 <div>
 <ul class="hosted">
