--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,7 +70,7 @@ nav button{
 }
 a{text-decoration:none;
 padding-right:3px;color:#2cb5e9 }
-.errors{color:red}
+.errors, article{color:red}
 .field_with_errors{
   background-color: red;
   padding: 3px;
@@ -98,7 +98,7 @@ table{
   margin:auto;
 }
 
-form{
+form, article{
   width:50%;
   margin:auto
 }
