--- a/app/views/public_activity/event/_update.erb
+++ b/app/views/public_activity/event/_update.erb
@@ -1,3 +1,4 @@
 <div class="">
-<%#= @activities.select{|x,y| x.key == "event.update"}  %>
+<%= @activities.select{|x,y| x.key == "event.update"}.last.inspect  %> UPDATED!!
+
 </div>
