--- a/app/views/public_activity/event/_destroy.erb
+++ b/app/views/public_activity/event/_destroy.erb
@@ -1,3 +1,4 @@
-<div class="">
-<%= @activities.select{|x,y| x.key == "event.destroy"}.last  %>
+<div class="ok">
+<%= @activities.select{|x,y| x.key == "event.destroy"}.last.inspect  %> DESTROYED!!
+
 </div>
