--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <li><%= link_to 'Manage Amenities', '/manage/amenities' %></li>
 
         <li><%= link_to 'Manage Users','/manage/users' %></li>
-        <li><%= link_to 'Sales Report', sales_path %></li>
+        <li><%= link_to 'Performance Report', sales_path %></li>
       </ul>
       </nav>
       <% end %>
